[build-system]
requires = ["setuptools>=63", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qe-test-case-generator"
version = "0.1.0"
description = "AI-Assisted Model-Driven Test Development engine"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Maintainer"}]
license = {text = "MIT"}
dependencies = [
    "openai>=1.12.0",
    "javalang>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
qe-testgen = "qe_test_case_generator.cli:cli"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["qe_test_case_generator"]
